# CineFace

./: .gitattributes  .gitignore  .gitmodules  README.md  Retina.py  _cluster_faces.py  _match_clusters.py  add_encodings.py  add_file_to_database.py  add_to_server.ipynb  add_to_server.py  analyze_cluster_data.ipynb  analyze_video.py  cineface_update.py  cineface_update_dev.py  cineface_update_exp.py  classifier.ipynb  classify_faces.py  cluster_faces.py  cluster_series.py  download_headshots.py  encode_faces.py  encode_faces_dev.py  find_faces.py  find_faces_dev.py  find_faces_exp.py  find_faces_queue.py  find_faces_queue_dev.py  find_faces_queue_exp.py  find_faces_queue_single.py  find_faces_threaded.py  find_faces_threaded_batch.py  find_faces_threaded_batch_test.py  fix_encodings.py  get_episode_info.py  get_headshots.py  image_analysis.ipynb  images.csv  inject_encodings copy.ipynb  inject_encodings.ipynb  (+26 more)
Visage/: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  README.md  pyproject.toml
Visage/.github/ISSUE_TEMPLATE/: benchmark-results.yml
Visage/include/: image_processor.hpp  ops.hpp  pipeline.hpp  trt_infer.hpp  utils.hpp  version.hpp
Visage/include/spdlog/tests/: CMakeLists.txt
Visage/notebooks/: benchmarks.ipynb  benchmarks.json  detections.ipynb  find_faces_base.py
Visage/scripts/: benchmark.py  generate-pc-files.sh  prepare_models.py
Visage/src/: image_processor.cpp  main.cpp  ops.cpp  pipeline.cpp  trt_infer.cpp  utils.cpp
Visage/visage/: __init__.py  core.py
cineface/: match_faces.py  metadata.py  pipeline.py  save_faces.py
clustering/: cluster_series.py  clusters_match_opt.py  match_clusters.py  validate_clusters.py
clustering/notebooks/: house.ipynb  modern_family.ipynb
data/: clusters.csv  config.json  encodings.csv  episodes.csv  faces.csv  pat.txt  retina_facenet_test_labeled.csv  retina_facenet_test_predicted.csv  sample.csv  shining.csv  shining_bat.csv  test.csv  test_1.csv
data/.ipynb_checkpoints/: episodes-checkpoint.csv
data/house_2004_0412142/: S01E03.csv  S01E04.csv  S01E05.csv  S01E06.csv  S01E07.csv  S01E08.csv  S01E09.csv  S01E10.csv  S01E11.csv  S01E12.csv  S01E14.csv  S01E17.csv  S01E19.csv  S01E20.csv  S01E22.csv  S02E01.csv  S02E03.csv  S02E04.csv  S02E06.csv  S02E07.csv  S02E08.csv  S02E09.csv  S02E10.csv  S02E11.csv  S02E13.csv  S02E14.csv  S02E15.csv  S02E17.csv  S02E18.csv  S02E19.csv  S02E20.csv  S02E21.csv  S02E22.csv  S02E24.csv  S03E04.csv  S03E06.csv  S03E07.csv  S03E08.csv  S03E10.csv  S03E11.csv  (+36 more)
data/house_clusters.csv/: S01E01  S01E02
faces/a-murder-at-the-end-of-the-world_2023_15227418/: A.Murder.at.the.End.of.the.World.S01E06.Crime.Seen.2160p.HULU.WEB-DL.DDP5.1.HEVC-CMRG.csv
notebooks/: accuracy.ipynb  add_encodings.ipynb  add_to_faces.ipynb  chinese_whisper.ipynb  detect_blur.ipynb  distance_from_center.ipynb  documentation.ipynb  encode_faces.ipynb  faces.csv  fix.ipynb  inject_encodings.ipynb  inject_encodings_dev.ipynb  match_headshots.ipynb  mesh.ipynb  model_float16.ipynb  parse_encoding.ipynb  temp.ipynb  test_results.ipynb  test_video.ipynb
notebooks/research/: character_distance.ipynb  correlation.ipynb  directors.ipynb  distance_from_center.ipynb  face_size_history.ipynb  visage_comparision.ipynb
research/: identify_labels.py  label_sample.py  test_sample.py
research/data/: faces.csv  faces.ndjson  label_df.csv  recognition_model_comparison.csv  test.csv  video_dimensions.csv
research/notebooks/: VGGFace.ipynb  accuracy.ipynb  add_headshots.ipynb  alignment.ipynb  arcface.ipynb  backend_comparison.ipynb  compare_detectors.ipynb  compare_recognition.ipynb  confusion_matrix.ipynb  custom_accuracy.py  data_loader.ipynb  deepface.ipynb  dlib.ipynb  dlib_accuracy.ipynb  encode_faces.ipynb  facenet.ipynb  fix_faces.ipynb  headshots.ipynb  imdb.ipynb  k_nearest_neighbor.ipynb  labelbox.ipynb  matching.ipynb  matching_results.ipynb  min_face_size.ipynb  model_comparison.ipynb  model_float16.ipynb  mtcnn.ipynb  opencv.ipynb  opencv_accuracy.ipynb  optimum_threshold.ipynb  pr_curve.ipynb  reload_encoding.ipynb  retina_accuracy.ipynb  retina_custom.ipynb  retina_face.ipynb  retina_torch.ipynb  t.ipynb  temp.ipynb  tensorRT.ipynb  tmdb.ipynb  (+1 more)
research/test_results/: batchface.csv  batchface_new.csv  batchface_speed.csv  cv_new.csv  dlib.csv  dlib_new.csv  mtcnn.csv  retina.csv  retina_custom.csv  retina_custom_120.csv  retina_custom_360.csv  retina_custom_new.csv  retina_new.csv  retina_speed.csv  retina_torch.csv  (+5 more)
(+1212980 files in other folders)
